--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-private-route": "^1.1.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.4.0",
